[tool.poetry]
name = "trafficlight-detector"
version = "0.1.0"
description = ""
authors = ["penggin <77449586+penggin@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "trafficlight_detector"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
